# geometry_icl_finetuning

./: .gitignore  .slurm-764027.out.swp  .slurm-764230.out.swp  .slurm-850293.out.swp  README.md  extract_repr.py  finetune.py  finetune_fsdp.py  plot.py  pyproject.toml  requirements.txt  submit  submit_analysis  submit_extract  submit_finetune  test_mask_200.npy
analysis/: repr_analysis.py  test_mask_200.npy  utils.py
assets/: dev+validation_mask_20.npy  mask.npy  test_mask_100.npy
extraction/: compute_distances.py  extract_activations.py  extract_repr.py  helpers.py
extraction/intrinsic_dimension/: compute_distances.py  pairwise_distances.py
extraction/utils/: dataloader_utils.py  dataset_utils.py  helpers.py  model_utils.py  tokenizer_utils.py
notebook/: generated_script copy 2.sh  plot-checkpoint.ipynb  plot.ipynb  plot_1.ipynb  plot_1.py  plot_rebuttal.ipynb  plot_script.py  plot_script_old.py  science_qa copy.ipynb  science_qa.ipynb  test_mask_200_original.npy  tmp_script.py  tmp_script_1.py
notebook/.ipynb_checkpoints/: plot_1-checkpoint.ipynb
notebook/cache/mistral-1-7b/: point_overlap.npy
python=3.11/: pyvenv.cfg
scripts/: extract_repr.py  finetune.py  pythonpath.sh  submit_extract  submit_finetune
src/extraction/: compute_distances.py  helpers.py  pairwise_distances.py
src/logger/: logger.py
src/metrics/: clustering.py  intrinsic_dimension.py  overlap.py  probe.py
src/utils/: annotations.py  dataloader_utils.py  dataset_utils.py  error.py  helpers_extract.py  helpers_finetune.py  mmlu_pro_race.py  optimizer_utils.py  preprocess_dataset.py  scienceqa.py  tensor_storage.py  tokenizer_utils.py
tests/: tensor_tmp.py  unit_test_clustering.py  unit_test_intrinsic_dim.py  unit_test_probe.py  unit_test_tensor_retrieval.py
utils/: dataset_utils.py  helpers_extract.py  helpers_finetune.py  mmlu_pro_race.py  model_utils.py  optimizer_utils.py  tokenizer_utils.py
